# music-practice-generator

./: .gitignore  README.md  pyproject.toml  random_chords.ly  sample_log.txt  sample_rythms.ly
input/: tunes.csv
music_practice_generator/: __init__.py  pick_random_tune.py  rhythmgenerator.py  write_random_chords.py
tests/: test_advanced.py  test_basic.py
tests/test_samples/: sample_chords.ly  sample_rhythms.ly  sample_rythms.ly
