[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MusicPracticeGenerator"
version = "0.0.1"
authors = [
  { name="Joseph Axiak", email="jaxiak@gmail.com" },
]
description = "Some tools to help us practice music."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU GPLv3",
    "Operating System :: OS Independent",
]
dependencies = [
]
[tool.setuptools]
py-modules = []